adjust code for resource_page_link

--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -32,7 +32,7 @@ code: |
 ---
 code: |
   resource_page_url_only = "https://michiganlegalhelp.org/node/1083"
-  resource_page_link = "[Filing to Change or Get a Child Support Order](https://michiganlegalhelp.org/node/1083)"
+  resource_page_name = "Filing to Change or Get a Child Support Order"
 ---
 code: |
   MLH_time_min = 20
