--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -878,12 +878,20 @@ objects:
   - instructions: ALDocument.using(title="Instructions", filename="Instructions", enabled=True, has_addendum=False)
   - mrcs_attachment_main: ALDocument.using(title="Motion Regarding Support", filename="Motion Regarding Support - FOC 50.pdf", enabled=True, default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
   - mrcs_attachment_addendum: ALDocument.using(title="Motion Regarding Support Addendum", filename="Motion Regarding Support Addendum.docx")
-  - mrcs_foc10: ALDocument.using(title="Uniform Child Support Order", filename="Uniform Child Support Order - FOC 10.pdf", has_addendum=False)
-  - mrcs_foc10d: ALDocument.using(title="Uniform Child Support Order Deviation Addendum", filename="Uniform Child Support Order Deviation Addendum - FOC 10d.pdf", has_addendum=False)
+  - mrcs_foc10_main: ALDocument.using(title="Uniform Child Support Order", filename="Uniform Child Support Order - FOC 10.pdf", default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
+  - mrcs_foc10_addendum: ALDocument.using(title="Addendum to Uniform Child Support Order")
+  - mrcs_foc10d_main: ALDocument.using(title="Uniform Child Support Order Deviation Addendum", filename="Uniform Child Support Order Deviation Addendum - FOC 10d.pdf", default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
+  - mrcs_foc10d_addendum: ALDocument.using(title="Addendum to Uniform Child Support Order Deviation Addendum")
   - mrcs_foc12: ALDocument.using(title="Referral Order", filename="Referral Order - FOC 12.pdf", has_addendum=False)
 ---
 objects:
   - mrcs_attachment: ALDocumentBundle.using(elements=[mrcs_attachment_main, mrcs_attachment_addendum], filename="Motion RegardingSupport - FOC 50.pdf", title="Motion Regarding Support", enabled=True)
+---
+objects:
+  - mrcs_foc10: ALDocumentBundle.using(elements=[mrcs_foc10_main, mrcs_foc10_addendum], title="Uniform Child Support Order", filename="Uniform Child Support Order - FOC 10.pdf")
+---
+objects:
+  - mrcs_foc10d: ALDocumentBundle.using(elements=[mrcs_foc10d_main, mrcs_foc10d_addendum], title="Uniform Child Support Order Deviation Addendum", filename="Uniform Child Support Order Deviation Addendum - FOC 10d.pdf")
 ---
 objects:
   - al_cover_bundle: ALDocumentBundle.using(elements=[cover_sheet_template, instructions], filename="Instructions - Do not file this", title="Instructions", enabled=True)
@@ -894,9 +902,13 @@ objects:
 ---
 code: |
   if base_support_matches_calc == "unable_to_use_mi_calc":
-    mrcs_foc10.enabled = False
+    mrcs_foc10_main.enabled = False
   else:
-    mrcs_foc10.enabled = True
+    mrcs_foc10_main.enabled = True
+    if len(children) > 6:
+      mrcs_foc10_addendum.enabled = True
+    else:
+      mrcs_foc10_addendum.enabled = False
 ---
 code: |
   if base_support_matches_calc == "unable_to_use_mi_calc" and (agreed_on_who_pays or not has_existing_support_order):
@@ -906,9 +918,13 @@ code: |
 ---
 code: |
   if base_support_matches_calc == "different_from_mi_calc":
-    mrcs_foc10d.enabled = True
+    mrcs_foc10d_main.enabled = True
+    if len(children) > 6:
+      mrcs_foc10d_addendum.enabled = True
+    else:
+      mrcs_foc10d_addendum.enabled = False
   else:
-    mrcs_foc10d.enabled = False
+    mrcs_foc10d_main.enabled = False
 ---
 code: |
   if base_support_matches_calc == "unable_to_use_mi_calc":
@@ -921,11 +937,21 @@ attachment:
   docx template file: Motion_Regarding_Support_Addendum.docx
   skip undefined: True
 ---
+attachment:
+  variable name: mrcs_foc10_addendum[i]
+  docx template file: FOC_10_Addendum.docx
+  skip undefined: True
+---
+attachment:
+  variable name: mrcs_foc10d_addendum[i]
+  docx template file: FOC_10d_Addendum.docx
+  skip undefined: True
+---
 code: |
   # TODO(brycew): we don't really need to treat the addendum like an addendum?
   # `circumstance_changes` go in it, but also structured info about other payments.
   # Should just be a DOCX template, wrapped with a bundle for the mrcs_attachment.
-  mrcs_attachment.overflow_fields.gathered = True
+  # mrcs_attachment.overflow_fields.gathered = True
 ---
 attachment:
   name: instructions  
@@ -999,7 +1025,7 @@ attachment:
 ---
 attachment:
   name: Uniform Child Support Order
-  variable name: mrcs_foc10[i]
+  variable name: mrcs_foc10_main[i]
   skip undefined: True
   editable: False
   pdf template file: Uniform Child Support Order - FOC 10.pdf
@@ -1035,7 +1061,7 @@ attachment:
 ---
 attachment:
   name: Uniform Child Support Order Deviation Addendum
-  variable name: mrcs_foc10d[i]
+  variable name: mrcs_foc10d_main[i]
   skip undefined: True
   editable: False
   pdf template file: Uniform Child Support Order Deviation Addendum - FOC 10d.pdf
