--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
@@ -11,36 +11,8 @@ review:
       ${ review_empty_explainer }
       % endif
   - raw html: |
-      ${ start_accordion('<h2 class="h5">Your Case Information</h2>') }
+      ${ start_accordion('<h2 class="h5">Case Information</h2>') }
     show if: docket_number
-  - Edit: users.revisit
-    button: |-
-      **You**
-
-      % for item in users:
-      - ${ item }
-      % endfor
-  - Edit: other_parties.revisit
-    button: |-
-      **The Other side of your case**
-
-      % for item in other_parties:
-      - ${ item }
-      % endfor
-  - Edit: children.revisit
-    button: |-
-      **Children**
-
-      % for item in children:
-      - ${ item }
-      % endfor
-  - Edit: judge.revisit
-    button: |-
-      **Judge**
-
-      % for item in judge:
-      - ${ item }
-      % endfor
   - Edit: docket_number
     button: |
       **What is your case number?**
@@ -56,6 +28,32 @@ review:
 
       ${ the_court } - ${ county_choice } County
   - Edit:
+      - agreed_on_who_pays
+      - recompute:
+        - circumstance_changes_update
+    button: |
+      **Have you and the other parent agreed on who should pay support and how much?**
+
+      ${ word(yesno(agreed_on_who_pays)) }
+  - Edit:
+      - have_circumstances_changed
+      - recompute:
+        - circumstance_changes_update
+    button: |
+      **Have circumstances changed?**
+
+      ${ word(yesno(have_circumstances_changed)) }
+  - Edit: |-
+      circumstance_changes
+    button: |
+      **How have your circumstances changed?**
+
+      ${ showifdef('circumstance_changes') }
+    show if: have_circumstances_changed
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Parent Information</h2>') }
+    show if: user_started_case or not user_started_case
+  - Edit:
       - user_ask_role
       - recompute:
         - plaintiffs
@@ -67,8 +65,32 @@ review:
       **What party are you in your existing case?**
 
       ${ showifdef('user_ask_role').capitalize() }
+  - Edit: users.revisit
+    button: |-
+      **You**
+
+      % for item in users:
+      - ${ item }
+      % endfor
+  - Edit: other_parties.revisit
+    button: |-
+      **The Other parent in your case**
+
+      % for item in other_parties:
+      - ${ item }
+      % endfor
   - raw html: |
-      ${ next_accordion('<h2 class="h5">Prior Support Order</h2>') }
+      ${ next_accordion('<h2 class="h5">Children Information</h2>') }
+    show if: current_child_support_signpost
+  - Edit: children.revisit
+    button: |-
+      **Children**
+
+      % for item in children:
+      - ${ item }
+      % endfor
+  - raw html: |
+      ${ next_accordion('<h2 class="h5">Prior Order</h2>') }
     show if: has_existing_support_order or not has_existing_support_order
   - note: |
       % if has_existing_support_order:
@@ -128,33 +150,7 @@ review:
       How much ordinary medical costs were ordered per month?: ${ currency(showifdef('medical_care_amount')) }
       % endif
   - raw html: |
-      ${ next_accordion('<h2 class="h5">Agreement Information</h2>') }
-    show if: agreed_on_who_pays or not agreed_on_who_pays
-  - Edit:
-      - agreed_on_who_pays
-      - recompute:
-        - circumstance_changes_update
-    button: |
-      **Have you and the other parent agreed on who should pay support and how much?**
-
-      ${ word(yesno(agreed_on_who_pays)) }
-  - Edit:
-      - have_circumstances_changed
-      - recompute:
-        - circumstance_changes_update
-    button: |
-      **Have circumstances changed?**
-
-      ${ word(yesno(have_circumstances_changed)) }
-  - Edit: |-
-      circumstance_changes
-    button: |
-      **How have your circumstances changed?**
-
-      ${ showifdef('circumstance_changes') }
-    show if: have_circumstances_changed
-  - raw html: |
-      ${ next_accordion('<h2 class="h5">Support Requested Information</h2>') }
+      ${ next_accordion('<h2 class="h5">Support Requested</h2>') }
     show if: who_pays_new
   - Edit: 
       - who_pays_new
@@ -262,15 +258,6 @@ subquestion: |
 
   ${ children.add_action() }
 continue button field: children.revisit
----
-id: revisit judge
-question: |
-  Edit your answers about the judge
-subquestion: |
-  ${ judge.table }
-   
-  ${ judge.add_action() }
-continue button field: judge.revisit
 ---
 table: children.table
 rows: children
