--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
 [build-system]
-requires = ["setuptools"]
+requires = [
+    "setuptools==80.9.0",
+]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "docassemble.MLHMotionRegardingChildSupport"
+version = "1.0.5"
+description = "A motion to change or get child support in Michigan"
+readme = "README.md"
+authors = [
+    { name = "Bryce Willey", email = "ekressmiller@lsscm.org" },
+]
+dependencies = []
+license = "MIT"
+license-files = [
+    "LICENSE",
+]
+
+[project.urls]
+Homepage = "https://michiganlegalhelp.org/resources/family/do-it-yourself-motion-change-or-get-child-support"
+
+[tool.setuptools.packages.find]
+where = [
+    ".",
+]
